# news-rss-wiki-demo

./: .gitignore  README.md  README.zh-CN.md  plan.md  pyproject.toml
.codex/skills/rsslab-llm-wiki/: SKILL.md
.codex/skills/rsslab-llm-wiki/agents/: openai.yaml
docs/: 2026-06-07-rsslab-project-status.zh-CN.md  2026-06-09-rsslab-layering-and-incremental-wiki.zh-CN.md  llm-wiki-boundaries.md
docs/superpowers/plans/: 2026-06-05-llm-wiki-integration.md
evidence/: world_cup.jsonl
knowledge_bases/world-cup/: index.md  log.md  manifest.yaml
knowledge_bases/world-cup/raw/collection-1/: article-23.json  article-25.json  article-52.json  article-57.json  article-61.json  article-70.json
knowledge_bases/world-cup/wiki/: bbc-news.md  evidence.md  mexico-football-culture.md  mexico-host-cities.md  security.md  three-hosts.md  timeline.md  travel-and-visas.md  us-political-context.md
src/rsslab/: __init__.py  cli.py  collections.py  db.py  dedupe.py  extractor.py  models.py  parser.py  rss.py  schema.sql  search.py  services.py
tests/: fixtures.py  test_cli.py  test_collections.py  test_dedupe.py  test_extract.py  test_parser.py  test_search.py  test_services.py
tmp_tests/smoke-collect/: bundle-20260607162654533.jsonl  rsslab-20260607162654533.db
