[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsslab"
version = "0.1.0"
description = "RSS/Atom news collection CLI with local SQLite storage and search."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
rsslab = "rsslab.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rsslab = ["schema.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
